# catan

./: .firebaserc  .gitignore  AgentRoadmap.md  AlphaBeta.md  CLAUDE.md  HumanVBot.md  LICENSE  README.md  directory_structure.txt  environment.yml  firebase.json  hexToPixel.md  index.html  print_directories.py  test.html  vercel.json
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  pages.yml  shuttle-deploy.yml
back/: .gitignore  Cargo.toml
back/src/: actions.rs  application.rs  deck_slices.rs  decks.rs  enums.rs  errors.rs  game.rs  global_state.rs  lib.rs  main.rs  manager.rs  map_instance.rs  map_template.rs  mod.rs  node_coordinates.rs  ordered_hashmap.rs  player.rs  player_system.rs  state.rs  state_vector.rs  websocket.rs  websocket_service.rs
back/src/game/: ai.rs  board.rs  manager.rs  mod.rs  types.rs
back/src/handlers/: ws.rs
back/src/players/: greedy.rs  greedy_player.rs  human.rs  mcts.rs  mcts_player.rs  minimax.rs  mod.rs  random.rs  value.rs  weighted_random.rs  weighted_random_player.rs  zero.rs
back/src/players/nn/: candle_impl.rs  encoder.rs  infer_worker.rs  loader.rs  mod.rs  model.rs  noop_impl.rs  self_play.rs  types.rs
back/src/state/: move_application.rs  move_generation.rs
backend/: app.py
browser/: 3rdpartylicenses.txt
browser/browser/: index.html  main-NV3A72VV.js  styles-ISTUINKH.css
front/: .firebaserc  .gitignore  .nojekyll  .prettierignore  .prettierrc  DEBUG_MODE.md  README.md  angular.json  deploy-firebase.sh  eslint.config.js  firebase.json  package-lock.json  package.json  tailwind.config.js  vercel.json
front/.github/: README.md
front/.github/workflows/: angular-deploy.yml  deploy.yml
front/src/: 404.html  _variables.scss  index.html  styles.scss  theme.scss
front/src/app/: app.component.html  app.component.ts  app.config.ts  app.module.ts  app.routes.ts
front/src/app/models/: game-message.ts  game-types.ts
front/src/assets/: .gitkeep  robots.txt
front/src/environments/: environment.prod.ts  environment.production.ts  environment.ts
frontend/: angular.json  package-lock.json  package.json
frontend/src/app/: app.component.ts  app.config.ts  app.module.ts  app.routes.ts  data.service.ts
(+43 files in other folders)
