[package]
name = "catan"  # Using shorter name from Shuttle
version = "0.1.0"
edition = "2021"

[dependencies]
# Shuttle requirements
shuttle-actix-web = "0.48.0"
shuttle-runtime = "0.48.0"

# Actix ecosystem
actix = "0.13"
actix-web = "4.3.1"  # Using Shuttle's version
actix-web-actors = "4.2"
actix-cors = "0.6"

# Async runtime
tokio = { version = "1.26.0", features = ["full"] }  # Using Shuttle's version

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.4", features = ["v4", "serde"] }
env_logger = "0.10"
log = "0.4"
rand = "0.8"

[dev-dependencies]
actix-rt = "2.9"