[package]
name = "catan"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server dependencies
axum = { version = "0.8.1", features = ["json"] }
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }

# Shuttle runtime
shuttle-runtime = "0.53.0"
shuttle-axum = "0.53.0"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.1", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Utilities
rand = "0.8"
itertools = "0.12"
