[package]
name = "catan"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server dependencies
axum = { version = "0.8.1", features = ["json", "ws"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }

# Shuttle runtime
shuttle-runtime = "0.55.0"
shuttle-axum = "0.55.0"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.1", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Utilities
rand = "0.8"
rand_xorshift = "0.3"
itertools = "0.12"
futures = "0.3"
tokio-stream = "0.1"
rayon = "1.8"
async-trait = "0.1"

# CLI tools
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "simulate"
path = "src/bin/simulate.rs"
